@@ -7,3 +7,4 @@ glFusion Membership Plugin - Change Log
 - Add a function to the admin page to import existing site members
 - Added a way to disable new-user welcome messages.
 - Add handling for membership numbers
+- Remove member from any positions held upon expiration or cancellation.
